baml_language/crates/baml_tests/snapshots/diagnostic_errors/attribute_validation/baml_tests__diagnostic_errors__attribute_validation__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ===
class user.HasDuplicateDescription {
  name: string
}
class user.HasDuplicateField {
  name: string
  age: int
  name: int
}
class user.HasDuplicateFieldAttr {
  name: string
}
enum user.HasDuplicateEnumAttr {ONE, TWO}
enum user.HasDuplicateVariant {RED, BLUE, RED}
enum user.HasDuplicateVariantAttr {ACTIVE, INACTIVE}
