baml_language/crates/baml_tests/snapshots/diagnostic_errors/attribute_validation/baml_tests__diagnostic_errors__attribute_validation__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
class user.HasDuplicateDescription {
  name: string
}
class user.HasDuplicateDescription$stream {
  name: string | null
}
class user.HasDuplicateField {
  name: string
  age: int
  name: int
}
class user.HasDuplicateField$stream {
  name: string | null
  age: int | null
  name: int | null
}
class user.HasDuplicateFieldAttr {
  name: string
}
class user.HasDuplicateFieldAttr$stream {
  name: string | null
}
enum user.HasDuplicateEnumAttr {ONE, TWO}
enum user.HasDuplicateVariant {RED, BLUE, RED}
enum user.HasDuplicateVariantAttr {ACTIVE, INACTIVE}
