baml_language/crates/baml_tests/snapshots/diagnostic_errors/attribute_validation/baml_tests__diagnostic_errors__attribute_validation__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.HasDuplicateDescription {
  name: string
}
function user.HasDuplicateDescription.to_json(self: user.HasDuplicateDescription) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "name": self.name.to_json() } : map<string, baml.json.json>
}
function user.HasDuplicateDescription.from_json(j: baml.json.json) -> user.HasDuplicateDescription throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.HasDuplicateDescription
}
class user.HasDuplicateField {
  name: string
  age: int
  name: int
}
function user.HasDuplicateField.to_json(self: user.HasDuplicateField) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "name": self.name.to_json(), "age": self.age.to_json(), "name": self.name.to_json() } : map<string, baml.json.json>
}
function user.HasDuplicateField.from_json(j: baml.json.json) -> user.HasDuplicateField throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.HasDuplicateField
}
class user.HasDuplicateFieldAttr {
  name: string @alias("n") @description("Name") @alias("nm")
}
function user.HasDuplicateFieldAttr.to_json(self: user.HasDuplicateFieldAttr) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "name": self.name.to_json() } : map<string, baml.json.json>
}
function user.HasDuplicateFieldAttr.from_json(j: baml.json.json) -> user.HasDuplicateFieldAttr throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.HasDuplicateFieldAttr
}
enum user.HasDuplicateVariant
enum user.HasDuplicateEnumAttr
enum user.HasDuplicateVariantAttr
class user.HasDuplicateDescription$stream {
  name: null | string
}
class user.HasDuplicateField$stream {
  name: null | string
  age: null | int
  name: null | int
}
class user.HasDuplicateFieldAttr$stream {
  name: null | string @alias("n") @description("Name") @alias("nm")
}
